syntax = "proto3";

package request_proto;

message BindingQueryItem {
    string contractID = 1;
    string contractBinding = 2;
}

message BindingQueryMessage {
    repeated BindingQueryItem items = 1;
}